# xrwm

./: Cargo.toml  README.md
src/: config.rs  main.rs  screen.rs  window.rs
src/window_manager/: event_handler.rs  mod.rs  tiling.rs
src/window_manager/event_handler/: key_combinations.rs  keyboard_event_handler.rs
